# jotpsych-fullstack-swe-challenge-3

./: .gitignore  notes.md
backend/: .env.example  README.md  app.py  pyproject.toml  run.sh
backend/src/: app.py  cache.py  categorization.py  config.py  logging.py  schemas.py  state.py  utils.py
backend/src/routes/: __init__.py  cache.py  transcription.py  user.py  version.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioRecorder.tsx  CategoryDisplay.tsx  JobsList.tsx  ResultModal.tsx  StatsDisplay.tsx  VersionAlert.tsx
frontend/src/services/: APIService.ts
frontend/src/types/: api.ts
