[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = " Mehdi Zare",email = "mehdizarem@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
