[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = " Mehdi Zare",email = "mehdizarem@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langgraph (>=0.4.5,<0.5.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "langchain-anthropic (>=0.3.13,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
